--- a/src/_includes/basehead.html
+++ b/src/_includes/basehead.html
@@ -1,5 +1,6 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>{{title}}</title>
+<title>{{site.title }} | {{ title | default("eleventy")}}</title>
 <script src="https://cdn.tailwindcss.com"></script>
+<link rel="stylesheet" href="{{ 'src/css/home.css' | url }}">
 <link rel="stylesheet" href="/css/home.css">
